manifests/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marckbot2bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marckbot2bot
  template:
    metadata:
      labels:
        app: marckbot2bot
    spec:
      containers:
        - name: marckbot2bot
          image: ghcr.io/inputusername/telegram-marckbot2bot:sha-be28c04
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: marckbot2bot-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: marckbot2bot
  labels:
    app: marckbot2bot
    service: marckbot2bot
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: marckbot2bot
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: marckbot2bot
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "bot.yele.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: marckbot2bot
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /marckbot2bot
